test/spec/of_string-overflow-s32.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/of_string-overflow-s32.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/of_string-overflow-s32.fail.wast:1:26: invalid literal "-2147483649"
(module (func (i32.const -2147483649)))
                         ^^^^^^^^^^^
;;; STDERR ;;)
